Update .streamlit_settings.json with new parameters
Added new parameters for bus capacity and travel time.

--- a/.streamlit_settings.json
+++ b/.streamlit_settings.json
@@ -2,50 +2,54 @@
   "mix_easypass": 49,
   "mix_eu_manual": 21,
   "mix_tcn_at": 15,
-  "mix_tcn_vh": 7,
-  "mix_tcn_ve": 8,
+  "mix_tcn_v": 15,
   "ees_choice": "0:100",
   "deboard_offset_min": 5,
   "deboard_window_min": 10,
   "walk_speed_mean_mps": 1.25,
   "walk_speed_sd_mps": 0.25,
   "walk_speed_floor_mps": 0.5,
+  "bus_capacity": 90,
+  "bus_fill_time_min": 7.0,
+  "bus_travel_time_min": 2.5,
   "sss_enabled_t1": false,
   "sss_enabled_t2": false,
   "cap_sss": 6,
   "cap_easypass": 6,
   "cap_eu": 2,
-  "cap_tcn": 2,
+  "cap_tcn": 3,
   "cap_sss_t1": 3,
-  "cap_easypass_t1": 6,
+  "cap_easypass_t1": 4,
   "cap_eu_t1": 2,
-  "cap_tcn_t1": 2,
   "mean_easypass_s": 20.0,
   "sd_easypass_s": 10.0,
   "mean_eu_s": 19.0,
   "sd_eu_s": 22.0,
   "process_time_scale_pct": 100,
-  "tcn_at_policy": "load",
+  "tcn_at_target": "TCN",
+  "changeover_s": 8.0,
   "seed": 42,
-  "sim_runs": 5,
   "threshold_pax_length_t1": 50,
   "threshold_pax_length_t2": 50,
   "threshold_wait_s_t1": 60,
   "threshold_wait_s_t2": 60,
-  "mean_sss_vh_reg_s": 34.0,
-  "sd_sss_vh_reg_s": 12.0,
-  "mean_sss_vh_unreg_s": 34.0,
-  "sd_sss_vh_unreg_s": 12.0,
-  "mean_sss_ve_reg_s": 34.0,
-  "sd_sss_ve_reg_s": 12.0,
-  "mean_sss_ve_unreg_s": 34.0,
-  "sd_sss_ve_unreg_s": 12.0,
-  "mean_tcn_vh_reg_s": 97.0,
-  "sd_tcn_vh_reg_s": 22.0,
-  "mean_tcn_vh_unreg_s": 117.0,
-  "sd_tcn_vh_unreg_s": 22.0,
-  "mean_tcn_ve_reg_s": 87.05,
-  "sd_tcn_ve_reg_s": 22.0,
-  "mean_tcn_ve_unreg_s": 115.0,
-  "sd_tcn_ve_unreg_s": 22.0
+  "mean_sss_s": 34.0,
+  "sd_sss_s": 20.4,
+  "mu_tcn_v_reg_s": 3.9200000000000035,
+  "sigma_tcn_v_reg_s": 0.54,
+  "mu_tcn_v_unreg_s": 3.92,
+  "sigma_tcn_v_unreg_s": 0.54,
+  "max_tcn_v_s": 180.0,
+  "cap_tcn_t1_06-09": 2,
+  "cap_tcn_t2_06-09": 2,
+  "cap_tcn_t1_09-12": 3,
+  "cap_tcn_t2_09-12": 4,
+  "cap_tcn_t1_12-15": 2,
+  "cap_tcn_t2_12-15": 2,
+  "cap_tcn_t1_15-18": 2,
+  "cap_tcn_t2_15-18": 2,
+  "cap_tcn_t1_18-21": 2,
+  "cap_tcn_t2_18-21": 4,
+  "cap_tcn_t1_21-00": 2,
+  "cap_tcn_t2_21-00": 2
 }
